--- a/trading-front-end/package.json
+++ b/trading-front-end/package.json
@@ -11,8 +11,13 @@
   "dependencies": {
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
+    "react-router-dom": "^6.10.0",
+    "sort-by": "^0.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
